# ArquitecturaII-2-2025

./: CMakeLists.txt  README.md  README_CACHE_MESI.md  SharedMemory.cpp  SharedMemory.h  cache_stats.csv  main.cpp  mesi_gui.py  metrics.py
PE/pe/: pe.cpp  pe.hpp  test.cpp
apps/: dotprod_mesi_main.cpp
src/: MesiInterconnect.cpp  MesiInterconnect.hpp
src/memory/: SharedMemory.cpp  SharedMemory.h
src/memory/cache/mesi/: MESICache.cpp  MESICache.hpp  MesiDebug.hpp  MesiInterconnect.cpp  MesiInterconnect.hpp  MesiTypes.hpp
src/memory/cache/mesi/adapters/: InterconnectAdapter.hpp
src/utils/: Stepper.hpp
tests/cache/mesi/: test_mesi_basic.cpp  test_mesi_m_to_s.cpp
